# personalized_xai

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_new.txt
data/chromadb/diabetes/: chroma.sqlite3
data/chromadb/lendingclub/: chroma.sqlite3
data/docs/diabetes/: doc-1.txt  doc-2.txt  doc-3.txt
data/docs/lendingclub/: doc-1.txt  doc-2.txt  doc-3.txt
data/kb/diabetes/: kb-diabetes.json
data/kb/lendingclub/: kb-lendingclub.json
data/raw/: diabetes_risk_probabilities.csv  lendingclub.csv  lendingclub_risk_probabilities.csv
results/Agent-as-a-Judge/: agent_judge_eval_diabetes.csv  agent_judge_eval_lendingclub.csv
results/baseline/diabetes/: results_gpt-oss-20b-cloud_seed_42.json  results_kimi-k2.5-cloud_seed_42.json
results/baseline/lendingclub/: results_gpt-oss-20b-cloud_seed_42.json  results_kimi-k2.5-cloud_seed_42.json
src/: agent_judge_eval.py  baseline_experiment.py  classifier.py  dataset.py  orchestrator.py  pipeline.py  ponte_experiment.py  setup_xai.py
src/components/: a_setup_xai.py  b_cpm.py  c_generator.py  cpm.py  d_verifiers.py  e_feedback_translator.py  f_refiner.py  g_rag.py  generator.py  llm_client.py  ollama_client.py
src/components/clf/: diabetes_model.pth  (+1 more)
src/config/: config.yaml  config_credit.yaml  config_diabetes.yaml  config_lendingclub.yaml
src/eval/: HE_qualitative.py  HE_quantitative.py  agent_evaluation.py
src/prompts/: prompts.yaml  prompts_credit.yaml  prompts_diabetes.yaml  prompts_lendingclub.yaml
src/rag/: kb_filter.py  txt_extraction.py
webui/: database.py  run.sh  streamlit_app.py
(+10 files in other folders)
